pricelist-ingress/app/pricelist-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysql
    tier: database
  name: mysql
  namespace: pricelist
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      tier: database
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
        tier: database
    spec:
      containers:
      - image: registry.access.redhat.com/rhscl/mysql-56-rhel7:latest
        name: mysql
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql/data
          name: mysql-db
      volumes:
      - name: mysql-db
        persistentVolumeClaim:
          claimName: pricelist-db-pvc
