pricelist-ingress/app/pricelist-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pricelist
    tier: frontend
  name: pricelist
  namespace: pricelist
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricelist
      tier: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pricelist
        tier: frontend
    spec:
      containers:
      - image: quay.io/redhatworkshops/pricelist:latest
        name: pricelist
        resources: {}
